--- a/templates/site-top-navigation.html
+++ b/templates/site-top-navigation.html
@@ -1,10 +1,29 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<!--Top Navigation-->
+<h1 id="IR-requests-log-navigation" hidden>Requests Log Navigation Bar</h1>
+<ul id="PageNav">
+	<li>
+		<a href=""> <!--TODO: Add page i.e. ../content/somepage-->
+		All Requests
+		</a>
+	</li>
+	<li>
+		<a href=""> <!--TODO: Add page i.e. ../content/somepage-->
+		Unassigned Requests
+		</a>
+	</li>
+	<li>
+		<a href=""> <!--TODO: Add page i.e. ../content/somepage-->
+		Due this Week
+		</a>
+	</li>
+	<li>
+		<a href="">  <!--TODO: Add page i.e. ../content/somepage-->
+		Status Update
+		</a>
+	</li>
+</ul>
+<html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882">
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
 </head>
-
-<body>
-</body>
 </html>
