--- a/templates/head.html
+++ b/templates/head.html
@@ -1,10 +1,20 @@
 <!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-</head>
 
-<body>
-</body>
+<meta content="IE=9; IE=8; IE=7; IE=EDGE" http-equiv="X-UA-Compatible"/>
+<meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
+<meta charset="utf-8"/>
+
+<meta charset="UTF-8"/>
+<meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport"/>
+<meta content="ie=edge" http-equiv="x-ua-compatible"/>
+
+<meta name="author" content="The University of Texas at San Antonio, Institutional Research and Analysis" />
+
+<!-- link href="/ir/css/backup_global.min.css" rel="stylesheet" --><!-- uncomment this and remove the stylesheet below if the style breaks one day -->
+<!-- <link href="/_files/css/global.min.css" rel="stylesheet"/> -->
+
+<link href="../css/print.css" media="print" rel="stylesheet"/>
+<link href="../css/site.css" rel="stylesheet"/>
+<!--#include virtual="/inc-share/analytics/analytics.js" --><html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"><head>
+</head>
 </html>
