--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,22 @@
 <!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+<section role="banner" aria-label="IR-banner" class="container">
+	<div class="row">
+		<div class="col-md-12 col-sm-12">
+			<!-- Title -->
+			<h1 class="site-top-Title pull-left">
+				<!-- The title text swaps out depending on screen resolution -->
+				<a class="web" href="/ir/">Institutional Research and Analysis</a>
+				<a class="mobile" href="/ir/">IR</a>
+			</h1>
+		</div>
+	</div>
+</section>
+<section role="navigation" aria-labelledby="IR-navigation" class="container" >
+	<div class="row">
+		<div class="col-sm-12">
+			<!--#include file="site-top-navigation.html" -->
+		</div>
+	</div>
+</section><html xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882"><head>
 </head>
-
-<body>
-</body>
 </html>
