--- a/templates/header.html
+++ b/templates/header.html
@@ -5,8 +5,8 @@
 			<!-- Title -->
 			<h1 class="site-top-Title pull-left">
 				<!-- The title text swaps out depending on screen resolution -->
-				<a class="web" href="/ir/">Institutional Research and Analysis</a>
-				<a class="mobile" href="/ir/">IR</a>
+				<a class="web" href="../">UTSA OIR Data Requests</a>
+				<a class="mobile" href="../"></a>
 			</h1>
 		</div>
 	</div>
