Minor fix to nav bar

--- a/templates/site-top-navigation.html
+++ b/templates/site-top-navigation.html
@@ -3,7 +3,7 @@
 <h1 id="IR-requests-log-navigation" hidden>Requests Log Navigation Bar</h1>
 <ul id="PageNav">
 	<li>
-		<a href=""></a><!--TODO: Add page-->
+		<a href=""><!--TODO: Add page-->
 		All Requests
 		</a>
 	</li>
