--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,15 @@
 	<!--#include file="templates/head.html" -->
 	<meta name="Portal Home" content="IR Requests Log Portal Site">
 	<title>OIR Data Requests Home | UTSA | University of Texas at San Antonio</title>
-	
+
+	<link rel="stylesheet" type="text/css" href= "{{ url_for('static', filename = 'css/global.min.css'   )}}" >
+	<link rel="stylesheet" type="text/css" media="print" href= "{{ url_for('static', filename = 'css/print.css'   )}}" >
+	<link rel="stylesheet" type="text/css" href= "{{ url_for('static', filename = 'css/site.css'   )}}" >
+<!-- 
 	<link href="css/global.min.css" rel="stylesheet" type="text/css" />
-	<link href="css/print.css" media="print" rel="stylesheet" type="text/css" />
+	<link href="css/print.css"  rel="stylesheet" type="text/css" />
 	<link href="css/site.css" rel="stylesheet" type="text/css"/>
-	
+-->
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
@@ -42,7 +46,9 @@
 							</div>
 							<div class="col-sm-12">
 								<div class="col-sm-12 text-sm-center">
-								
+									<p>Insert Requests Table here</p>
+
+									<img src="/plot.png" alt="my plot">
 									{% for i in df %}
        
       
@@ -90,7 +96,7 @@
 									{% endfor %}
 									{% endfor %}
 							
-									<p>Insert Requests Table here</p>
+									
 								</div>
 							</div>
 						</div>
