--- a/templates/allRequests.html
+++ b/templates/allRequests.html
@@ -31,12 +31,12 @@
 <h1 id="IR-requests-log-navigation" hidden>Requests Log Navigation Bar</h1>
 <ul id="PageNav">
 	<li>
-		<a href="allRequests"><!--TODO: Add page-->
+		<a href=""><!--TODO: Add page-->
 		All Requests
 		</a>
 	</li>
 	<li>
-		<a href=""> <!--TODO: Add page i.e. ../content/somepage-->
+		<a href="allRequests"> <!--TODO: Add page i.e. ../content/somepage-->
 		Unassigned Requests
 		</a>
 	</li>
@@ -62,14 +62,65 @@
 					<div class="col-sm-12" role="main">
 						<!-- begin page content -->
 						<div class="row">
-							<image src = "{{ url_for('static', filename = 'images/rowdy.png'   )}}" width = 10% href = "/">
+
+							<a href = "/">
+							<image src = "{{ url_for('static', filename = 'images/rowdy.png'   )}}" width = 10%  >
+
+							</a>
 							<div class="col-sm-12">
 								<h1>UTSA OIR Data Requests</h1>
 							</div>
 							<div class="col-sm-12">
 								<div class="col-sm-12 text-sm-center">
-									<p>Open Requests by Analyst</p>
-									<img src="/plot.png" alt="Requests Table">
+								
+									{% for i in df %}
+       
+      
+									<div class = "person">
+							
+									<pre class = "line">Total Jobs For:      {{i}}   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     </pre>
+							
+									<hr class =  "dottedLine">
+							
+							
+									</div>
+								   
+									{% for x in db %}
+									{% if x[16] == i %}
+								  
+							 
+							
+							
+									<pre class = "rightSec">   {{x[11]}}   </pre>
+							
+									<div class="vl"></div>
+							   
+							   
+							 
+							
+									<pre class = "line">Assigned To:          {{x[16]}}   </pre>
+							
+									<pre class = "line">Job Number:          {{x[1]}}  </pre>
+							
+									<pre class = "line">Requestor:             {{x[4]}}    </pre>
+							
+									<pre class = "line">Priority:                 {{x[17]}}       </pre>
+							
+									<pre class = "line">Due Date:              {{x[3]}}    </pre>
+							
+									<pre class = "line">Days Open:        </pre>
+							
+									<hr class =  "dottedLine">
+							
+							
+								 
+								  
+								
+									{% endif %}
+									{% endfor %}
+									{% endfor %}
+							
+									
 								</div>
 							</div>
 						</div>
