new HTML files for every tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,17 +36,17 @@
 		</a>
 	</li>
 	<li>
-		<a href=""> <!--TODO: Add page i.e. ../content/somepage-->
+		<a href="unassigned"> <!--TODO: Add page i.e. ../content/somepage-->
 		Unassigned Requests
 		</a>
 	</li>
 	<li>
-		<a href=""> <!--TODO: Add page i.e. ../content/somepage-->
+		<a href="dueThisWeek"> <!--TODO: Add page i.e. ../content/somepage-->
 		Due this Week
 		</a>
 	</li>
 	<li>
-		<a href="">  <!--TODO: Add page i.e. ../content/somepage-->
+		<a href="statusUpdate">  <!--TODO: Add page i.e. ../content/somepage-->
 		Status Update
 		</a>
 	</li>
