--- a/templates/statusUpdate.html
+++ b/templates/statusUpdate.html
@@ -1,5 +1,7 @@
 {% extends "site_base_layout.html" %}
 
+{% block title %}Status Update{% endblock %}
+
 {% block head %}
 {{ super() }}
 {% endblock %}
@@ -14,6 +16,7 @@
 	</a>
 	<div class="col-sm-12">
 		<h1>UTSA OIR Data Requests</h1>
+		<p>Description placeholder</p>
 	</div>
 	<div class="col-sm-12">
 		<div class="col-sm-12 text-sm-center">
