Accordians for all requests and unassigned

--- a/templates/site_base_layout.html
+++ b/templates/site_base_layout.html
@@ -6,9 +6,9 @@
 	<meta name="OIR Requests Portal" content="IR Requests Log Portal Site">
 	<title>OIR Data Requests - {% block title %}{% endblock %} | UTSA | University of Texas at San Antonio</title>
 
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'css/global.min.css'   )}}">
 	<link rel="stylesheet" type="text/css" media="print" href="{{ url_for('static', filename = 'css/print.css'   )}}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'css/site.css'   )}}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'css/bootstrap.min.css'   )}}">
 </head>
 
 <!--Top Navigation-->
