--- a/templates/unassigned.html
+++ b/templates/unassigned.html
@@ -20,12 +20,64 @@
 	</div>
 	<div class="col-sm-12">
 		<div class="col-sm-12 text-sm-center">
+			{% for x in db %}
+			{% if x[16] == None %}
+			<!--<pre class="rightSec">   {{x[11]}}   </pre>
 
-			Unassigned Placeholder
+				<div class="vl"></div>
 
+
+
+
+				<pre class="line">Assigned To:          {{x[16]}}   </pre>
+
+				<pre class="line">Job Number:          {{x[1]}}  </pre>
+
+				<pre class="line">Requestor:             {{x[4]}}    </pre>
+
+				<pre class="line">Priority:                 {{x[17]}}       </pre>
+
+				<pre class="line">Due Date:              {{x[3]}}    </pre>
+
+				<pre class="line">Days Open:        </pre>
+
+				<hr class="dottedLine">-->
+
+
+			<div id="accordion-{{ loop.index }}" role="tablist">
+				<div class="card">
+					<div class="card-header" role="tab" id="heading-{{ loop.index }}">
+						<h5 class="mb-0">
+							<a data-toggle="collapse" href="#collapse-{{ loop.index }}" aria-expanded="true"
+								aria-controls="collapse-{{ loop.index }}">
+								Task #{{ x[1] }} - Assigned to {{ x[16] }}
+							</a>
+						</h5>
+					</div>
+
+					<div id="collapse-{{ loop.index }}" class="collapse" role="tabpanel"
+						aria-labelledby="heading-{{ loop.index }}" data-parent="#accordion-{{ loop.index }}">
+						<div class="card-body">
+							{{x[11]}}<br><br>
+
+							Requestor: {{x[4]}}<br>
+							Priority: {x[17]}}<br>
+							Due Date: {{x[3]}}<br>
+							Days Open: <br>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			{% endif %}
+			{% endfor %}
 
 		</div>
 	</div>
 </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <!-- end page content -->
 {% endblock %}
