--- a/templates/unassigned.html
+++ b/templates/unassigned.html
@@ -61,7 +61,7 @@
 							{{x[11]}}<br><br>
 
 							Requestor: {{x[4]}}<br>
-							Priority: {x[17]}}<br>
+							Priority: {{x[17]}}<br>
 							Due Date: {{x[3]}}<br>
 							Days Open: <br>
 						</div>
