--- a/templates/dueThisWeek.html
+++ b/templates/dueThisWeek.html
@@ -21,11 +21,57 @@
 	<div class="col-sm-12">
 		<div class="col-sm-12 text-sm-center">
 
-			Due This Week Placeholder
+			{% for i in df %}
+
+			<!--To calculate the number of requests per analyst-->
+			{% set total_req = namespace(value=0) %}
+			{% for x in db %}
+			{% if x[16] == i %}
+			{% set total_req.value = total_req.value + 1 %}
+			{% endif %}
+			{% endfor %}
+
+			<!--Accordian structure-->
+			<div id="accordion-{{ loop.index }}" role="tablist">
+				<div class="card">
+					<div class="card-header" role="tab" id="heading-{{ loop.index }}">
+						<h5 class="mb-0">
+							<a data-toggle="collapse" href="#collapse-{{ loop.index }}" aria-expanded="true"
+								aria-controls="collapse-{{ loop.index }}">
+								Requests assigned to {{ i }} | Total = {{ total_req.value }}
+							</a>
+						</h5>
+					</div>
+
+					<div id="collapse-{{ loop.index }}" class="collapse" role="tabpanel"
+						aria-labelledby="heading-{{ loop.index }}" data-parent="#accordion-{{ loop.index }}">
+						<!--Card subsection for every request matching the analyst-->
+						{% for x in db %}
+						{% if x[16] == i %}
+						<div class="card-body">
+							{{x[11]}}<br><br>
+
+							Job Number: {{x[1]}}<br>
+							Requestor: {{x[4]}}<br>
+							Priority: {{x[17]}}<br>
+							Due Date: {{x[3]}}<br>
+							Days Open: <br>
+							<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+						</div>
+						{% endif %}
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+
+			{% endfor %}
 
 
 		</div>
 	</div>
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <!-- end page content -->
 {% endblock %}
