edit date, slight visual changes

--- a/templates/dueThisWeek.html
+++ b/templates/dueThisWeek.html
@@ -16,7 +16,7 @@
 	</a>
 	<div class="col-sm-12">
 		<h1>UTSA OIR Data Requests</h1>
-		<p>Description placeholder</p>
+		<p>Due This Week</p>
 	</div>
 	<div class="col-sm-12">
 		<div class="col-sm-12 text-sm-center">
@@ -38,7 +38,7 @@
 						<h5 class="mb-0">
 							<a data-toggle="collapse" href="#collapse-{{ loop.index }}" aria-expanded="true"
 								aria-controls="collapse-{{ loop.index }}">
-								Requests assigned to {{ i }} | Total = {{ total_req.value }}
+								 {{ i }} | Requests Due This Week: {{ total_req.value }}
 							</a>
 						</h5>
 					</div>
