--- a/templates/allRequests.html
+++ b/templates/allRequests.html
@@ -16,7 +16,7 @@
 	</a>
 	<div class="col-sm-12">
 		<h1>UTSA OIR Data Requests</h1>
-		<p>Description placeholder</p>
+		<p>All Request by Analyst</p>
 	</div>
 	<div class="col-sm-12">
 		<div class="col-sm-12 text-sm-center">
@@ -38,7 +38,8 @@
 						<h5 class="mb-0">
 							<a data-toggle="collapse" href="#collapse-{{ loop.index }}" aria-expanded="true"
 								aria-controls="collapse-{{ loop.index }}">
-								Requests assigned to {{ i }} | Total = {{ total_req.value }}
+								{{ i }}      | Total Requests: {{ total_req.value }} 
+							 
 							</a>
 						</h5>
 					</div>
