--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,10 @@
 	<image src="{{ url_for('static', filename = 'images/rowdy.png'   )}}" width=10% href="/">
 		<div class="col-sm-12">
 			<h1>UTSA OIR Data Requests</h1>
-			<p>Description placeholder</p>
+			<p>Open Data Requests by Analyst</p>
 		</div>
 		<div class="col-sm-12">
 			<div class="col-sm-12 text-sm-center">
-				<p>Open Requests by Analyst</p>
 				<img src="/plot.png" alt="Requests Table">
 			</div>
 		</div>
