--- a/templates/unassigned.html
+++ b/templates/unassigned.html
@@ -16,7 +16,7 @@
 	</a>
 	<div class="col-sm-12">
 		<h1>UTSA OIR Data Requests</h1>
-		<p>Description placeholder</p>
+		<p>Unassigned Requests</p>
 	</div>
 	<div class="col-sm-12">
 		<div class="col-sm-12 text-sm-center">
