--- a/templates/unassignedForm.html
+++ b/templates/unassignedForm.html
@@ -16,7 +16,7 @@
     </a>
     <div class="col-sm-12">
         <h1>UTSA OIR Data Requests</h1>
-        <p>Description placeholder</p>
+        <p>Unassigned Requests</p>
     </div>
     <div class="col-sm-12">
         <div class="col-sm-12 text-sm-left">
@@ -25,26 +25,25 @@
             {% if x[1] == formID %}
             <!--Specify that the form should post its data
             to the /update route. We will also prepopulate the data.-->
+        <div class = "unassignedContainer">
             <form method="POST" action="./update">
                 <input type="hidden" value="{{formID}}" name="formID">
                 <section>
-                    <label for="requestor">Requestor:</label><input type="text" id="requestor" value="{{x[4]}}"
-                        readonly>
+              <label for="assignanalyst">Assigned To:</label><input type="text" id="assignanalyst"
+                value="{{x[16]}}" name="newAssignedAnalyst">
                 </section>
                 <br>
-                <label for="description">Description:</label><textarea id="description" readonly>{{x[11]}}</textarea>
+                <label for="requestor">Requested By:</label><input type="text" id="requestor" value="{{x[4]}}"readonly>
                 <br>
                 <label for="priority">Priority:</label><input type="text" id="requestor" value="{{x[17]}}" readonly>
                 <br>
                 <label for="duedate">Due Date:</label><input type="text" id="duedate" value="{{x[3]}}" readonly>
                 <br>
-
-                <label for="assignanalyst">Assign analyst:</label><input type="text" id="assignanalyst"
-                    value="{{x[16]}}" name="newAssignedAnalyst">
-
+                <label for="description">Description:</label><textarea id="description" readonly>{{x[11]}}</textarea>
                 <br>
                 <input type="submit" value="Update">
             </form>
+        </div>
             {% endif %}
             {% endfor %}
         </div>
