--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,4 +1,3 @@
-/* CSS Document */
 html {
 	scroll-behavior: smooth;
 }
@@ -47,24 +46,8 @@ body {
 		 cursor: pointer;
 	}
 }
- .site-top-Title a:hover {
-	 color: #0c2340;
-}
- .site-top-Title a {
-	 color: #0c2340;
-}
  #site-top, #site-content {
 	 margin-top: 2em;
-}
- .site-top-Title {
-	 float: left;
-	 width: auto;
-	 margin-bottom: 5px;
-}
- .site-top-Title-img {
-	 float: left;
-	 width: 77;
-	 padding-right: 0.75rem;
 }
  .site-footer {
 	 background-color: #eee; 
@@ -84,17 +67,6 @@ body {
 	 margin: 0;
 	 text-align: center;
 	 position: relative;
-}
- .breadcrumbs {
-	 padding-top: .9em;
-	 padding-bottom: 0.45em;
-	 font-size: .75em;
-}
- .breadcrumbs span {
-	 padding: 0.2em;
-}
- .breadcrumbs a {
-	 color: #0c2340 
 }
  #PageNav li {
 	 vertical-align: center; 
@@ -122,101 +94,133 @@ body {
  #PageNav li a:hover {
 	 color: #D9D9D9;
 }
- .btn {
-	 padding: .7rem;
-}
- a.button {
-	 display: inline;
-	 background-color:#F2D3B4; 
-	 font-size: 25px; 
-	 padding: 2px 5px;
-	 border: 5px;
-	 border-style: solid; 
-	 border-color: #f47321;
-	 border-width: 0;
-	 margin: 0px 5px 5px 0px;
-	 box-shadow: 0px 2px 5px #555555;
-	 -webkit-transition: all 0.2s cubic-bezier(0, 0.5, 0.5, 1); /* Safari 4.0 - 8.0 */
-	 -webkit-transition-property: box-shadow, color;
-  	 transition: all 0.2s cubic-bezier(0, 0.5, 0.5, 1);
-	 transition-property: box-shadow, color;
-}
- a.button:hover {
-	 box-shadow: none;
-	 color: #f47321;
-}
-/***** styles for dropdowns ****/
-.dropdown-tab{
-	padding: 0;
-}
-.dropdown-list{
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	border-top: 1px solid #818181;
-	cursor: pointer;
-}
-.dropdown-list h4{
-	font-size: 22px;
-	display: inline;
-	margin: 0 0 0 5px;
-	padding: 0 0 0 0;
-}
-.dropdown-list:enabled{
-	color: white;
-}
-.dropdown-list div {
-	display: block;
-	padding: 0px 0px 0px 0px;
-	margin: 0;
-	text-decoration: none;
-	list-style: none;
-	background-color:#D7D7D7
-}
-.dropdown-list section {
-	padding-top: 2px;
-	padding-bottom: 2px;
-}
-.dropdown-list div:nth-child(odd){
-	background-color:#E0E0E0;
-}
-.dropdown-list div h5{
-	font-size: 20px;
-	color: black;
-	margin: 0;
-	padding: 0;
-}
-.dropdown-list div p{
-	margin: 0;
-	padding: 0;
-}
-.dropdown-list a{
-	color:#5e5e5e
-}
-.dropdown-list a:hover{
-	color:#131313
-}
-.dropdown-list div:hover{
-	background-color:#EEEEEE
-}
-.dropdown-item-container{
-	display: none;
-}
-/******* dashboards dropdown img *****/
-.dropdown-thumbnail {
-	width: 110px;
-	height: 110px;
-	border: 5px solid #CCCCCC; 
-	text-align: center;
-	object-fit: cover;
-	float: right;
-	margin: 5px 0px 5px 0px;
+
+/**********Site Forms*********/
+.form-style-1{
+	position: relative; 
+	top: 10px;
+	max-width: 100%;
+	flex: 0 0 100%;
+	padding: 20px 12px 10px 20px;
+	font: 13px Arial, Helvetica, sans-serif;
+
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	margin: 0px 0px 10px 0px;
+	border: 1px solid #0c2340;
+	padding: 20px;
+	background: #f3f3f3;
 }
 
-/* bootstrap extensions */
-.embed-responsive-55by34{
-	padding-top: 61.81%;
+.form-style-1 formtitle{
+	position: relative; 
+	top: -35px;
+	color: #0c2340;
+	border-top: 1px solid #0c2340;
+	border-left: 1px solid #0c2340;
+	border-right: 1px solid #0c2340;
+	border-radius: 5px 5px 0px 0px;
+	-webkit-border-radius: 5px 5px 0px 0px;
+	-moz-border-radius: 5px 5px 0px 0px;
+	background: #f3f3f3;
+	padding: 4px 10px 4px 10px;
+	font-weight: normal;
+	font-style: italic;
+	font-size: 15px;
 }
-.embed-responsive-temp{
-	padding-top: 50%;
+
+.form-style-1-heading{
+	font-weight: bold;
+	font-style: italic;
+	border-bottom: 2px solid #ddd;
+	margin-bottom: 20px;
+	background:#0c2340;
+	color:#ff5500;
+	font-size: 15px;
+	padding: 6px;
+}
+.form-style-1 label{
+	display: block;
+	margin: 0px 0px 0px 0px;
+}
+.form-style-1 label > span{
+	width: 100px;
+	font-weight: bold;
+	float: left;
+	padding-top: 8px;
+	padding-right: 5px;
+}
+.form-style-1 span.required{
+	color:red;
+}
+.form-style-1 .tel-number-field{
+	width: 40px;
+	text-align: center;
+}
+.form-style-1 input.input-field, input.readonly-input-field, .form-style-1 .readonly-textarea-field, .form-style-1 .select-field{
+	width: 75%;	
+}
+.form-style-1 input.input-field, 
+.form-style-1 .tel-number-field, 
+.form-style-1 .textarea-field, 
+.form-style-1 .select-field{
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	border: 1px solid #0c2340;
+	box-shadow: 1px 1px 4px #EBEBEB;
+	-moz-box-shadow: 1px 1px 4px #EBEBEB;
+	-webkit-box-shadow: 1px 1px 4px #EBEBEB;
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	padding: 7px;
+	outline: none;
+}
+.form-style-1 input.readonly-input-field,
+.form-style-1 .readonly-textarea-field{
+	background: #f8f8f8;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	border: 1px solid #d6d6d6;
+	box-shadow: 1px 1px 4px #EBEBEB;
+	-moz-box-shadow: 1px 1px 4px #EBEBEB;
+	-webkit-box-shadow: 1px 1px 4px #EBEBEB;
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	padding: 7px;
+	outline: none;
+}
+
+.form-style-1 .input-field:focus, 
+.form-style-1 .tel-number-field:focus, 
+.form-style-1 .textarea-field:focus,  
+.form-style-1 .select-field:focus{
+	border: 1px solid rgb(0, 143, 24);
+}
+.form-style-1 .textarea-field, 
+.form-style-1 .readonly-textarea-field{
+	height:100px;
+	width: 75%;
+}
+.form-style-1 input[type=submit],
+.form-style-1 input[type=button]{
+	border: none;
+	padding: 8px 15px 8px 15px;
+	background: #ff5500;
+	color: #fff;
+	box-shadow: 1px 1px 4px #DADADA;
+	-moz-box-shadow: 1px 1px 4px #DADADA;
+	-webkit-box-shadow: 1px 1px 4px #DADADA;
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+}
+.form-style-1 input[type=submit]:hover,
+.form-style-1 input[type=button]:hover{
+	background: #d63d00;
+	color: #D9D9D9;
 }
