--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,8 @@
 		</div>
 		<div class="col-sm-12">
 			<div class="col-sm-12 text-sm-center">
-				<img src="/plot.png" alt="Requests Table">
+				<!-- <img src="/plot.png" alt="Requests Table"> -->
+				<image src="{{ url_for('static', filename = 'barGraphs/mainGraph.png'   )}}" width=100% href="/">
 			</div>
 		</div>
 </div>
