--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,8 @@
 		<div class="col-sm-12">
 			<div class="col-sm-12 text-sm-center">
 				<!-- <img src="/plot.png" alt="Requests Table"> -->
-				<image src="{{ url_for('static', filename = 'barGraphs/mainGraph.png'   )}}" width=100% href="/">
+				<!--Uncomment me: Images for graphs had not been added-->
+				<!--<image src="{{ url_for('static', filename = 'barGraphs/mainGraph.png'   )}}" width=100% href="/">-->
 			</div>
 		</div>
 </div>
