--- a/templates/allRequests.html
+++ b/templates/allRequests.html
@@ -44,8 +44,8 @@
 				<div class="card">
 					<div class="card-header" role="tab" id="heading-{{ loop.index }}">
 						<h5 class="mb-0">
-							<a data-toggle="collapse" href="#collapse-{{ loop.index }}" aria-expanded="true"
-								aria-controls="collapse-{{ loop.index }}">
+							<a class="collapsed" data-toggle="collapse" href="#collapse-{{ loop.index }}"
+								aria-expanded="true" aria-controls="collapse-{{ loop.index }}">
 								<!--{{ i }} | Total Requests: {{ total_req.value }}-->
 
 								{{ analyst[7] }} | Total Requests: {{ total_req.value }}
@@ -57,19 +57,37 @@
 						aria-labelledby="heading-{{ loop.index }}" data-parent="#accordion-{{ loop.index }}">
 						<!--Card subsection for every request matching the analyst-->
 						{% for x in db %}
+						<!--If an analyst exists for the request (value is not NULL)-->
 						{% if x[16] != None %}
 						{% set db_assignedTo = x[16] %}
+						<!--Split the first and last name so we can match against firstName and lastName column in assignedTo table-->
 						{% set splitname = db_assignedTo.split() %}
+						<!--Match the request to the analyst through their name-->
 						{% if(( x[16] == a_fullname ) or ( a_lastname == splitname[1] and a_firstname == splitname[0] ))
 						%}
-						<div class="card-body">
-							{{x[11]}}<br><br>
 
-							Job Number: {{x[1]}}<br>
-							Requestor: {{x[4]}}<br>
-							Priority: {{x[17]}}<br>
-							Due Date: {{x[3]}}<br>
-							Days Open: <br>
+						<!--For fetching rqstTitle-->
+						{% if x[13] != None %}
+						{% set request_title = x[13] %}
+						{% endif %}
+						<!--If rqstTitle null, fetch rqstURL-->
+						{% if x[13] == None %}
+						{% set request_title = x[10] %}
+						{% endif %}
+
+						<div class="card-body">
+							<label for="title"><span>Request:</span></label><input type="text" id="title"
+								value="{{request_title}}" class="readonly-input-field" readonly>
+							<label for="description"><span>Description:</span></label><textarea id="description"
+								class="readonly-textarea-field" readonly>{{x[11]}}</textarea>
+							<label for="formid"><span>Request ID:</span></label><input type="text" id="formid"
+								value="{{x[1]}}" name="formID" class="readonly-input-field" readonly>
+							<label for="requestor"><span>Requestor:</span></label><input type="text" id="requestor"
+								value="{{x[4]}}" class="readonly-input-field" readonly>
+							<label for="priority"><span>Priority:</span></label><input type="text" id="priority"
+								value="{{x[17]}}" class="readonly-input-field" readonly>
+							<label for="duedate"><span>Due Date:</span></label><input type="text" id="duedate"
+								value="{{x[3]}}" class="readonly-input-field" readonly>
 							<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 						</div>
 						{% endif %}
