--- a/templates/dueThisWeek.html
+++ b/templates/dueThisWeek.html
@@ -36,9 +36,9 @@
 				<div class="card">
 					<div class="card-header" role="tab" id="heading-{{ loop.index }}">
 						<h5 class="mb-0">
-							<a data-toggle="collapse" href="#collapse-{{ loop.index }}" aria-expanded="true"
-								aria-controls="collapse-{{ loop.index }}">
-								 {{ i }} | Requests Due This Week: {{ total_req.value }}
+							<a class="collapsed" data-toggle="collapse" href="#collapse-{{ loop.index }}"
+								aria-expanded="true" aria-controls="collapse-{{ loop.index }}">
+								{{ i }} | Requests Due This Week: {{ total_req.value }}
 							</a>
 						</h5>
 					</div>
