--- a/templates/site_base_layout.html
+++ b/templates/site_base_layout.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" media="print" href="{{ url_for('static', filename = 'css/print.css'   )}}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'css/site.css'   )}}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'css/bootstrap.min.css'   )}}">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
 </head>
 
