--- a/templates/unassigned.html
+++ b/templates/unassigned.html
@@ -19,15 +19,17 @@
 		<p>Unassigned Requests</p>
 	</div>
 	<div class="col-sm-12">
-		<div class="col-sm-12 text-sm-left">
+		<div class="col-sm-12 text-sm-center">
 			{% for x in db %}
 			{% if x[16] == None %}
 			<div id="accordion-{{ loop.index }}" role="tablist">
 				<div class="card">
 					<div class="card-header" role="tab" id="heading-{{ loop.index }}">
 						<h5 class="mb-0">
-							<a data-toggle="collapse" href="#collapse-{{ loop.index }}" aria-expanded="true"
-								aria-controls="collapse-{{ loop.index }}">
+							<a class="collapsed" data-toggle="collapse" href="#collapse-{{ loop.index }}"
+								aria-expanded="true" aria-controls="collapse-{{ loop.index }}">
+
+								<!--<i class="fa fa-angle-down rotate-icon"></i>-->
 								<!--For fetching rqstTitle-->
 								{% if x[13] != None %}
 								{{x[13]}}
@@ -43,13 +45,19 @@
 					<div id="collapse-{{ loop.index }}" class="collapse" role="tabpanel"
 						aria-labelledby="heading-{{ loop.index }}" data-parent="#accordion-{{ loop.index }}">
 						<div class="card-body">
-							{{x[11]}}<br><br>
+							<label for="description"><span>Description:</span></label><textarea id="description"
+								class="readonly-textarea-field" readonly>{{x[11]}}</textarea>
 
-							Request ID: {{ x[1] }}<br>
-							Requestor: {{x[4]}}<br>
-							Priority: {{x[17]}}<br>
-							Due Date: {{x[3]}}<br>
-							Days Open: <br><br>
+							<label for="formid"><span>Request ID:</span></label><input type="text" id="formid"
+								value="{{x[1]}}" name="formID" class="readonly-input-field" readonly>
+							<label for="requestor"><span>Requestor:</span></label><input type="text" id="requestor"
+								value="{{x[4]}}" class="readonly-input-field" readonly>
+							<label for="priority"><span>Priority:</span></label><input type="text" id="priority"
+								value="{{x[17]}}" class="readonly-input-field" readonly>
+							<label for="duedate"><span>Due Date:</span></label><input type="text" id="duedate"
+								value="{{x[3]}}" class="readonly-input-field" readonly>
+
+							<br><br>
 
 							<script type="text/javascript">
 								function showForm(unassignedID) {
